<resources>
    <string name="app_name">TestAPI</string>
    <string name="background_image_of_blue_roses">Background image of blue roses</string>

    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>
    <string name="busy_people">Busy People</string>
</resources>
