<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/color_sign_up">

    <View
        android:id="@+id/logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="48dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_input"
        style="@style/Widget.TextInputLayout"
        android:layout_width="125dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toStartOf="@+id/last_name_input"
        app:layout_constraintStart_toStartOf="@+id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_name_input_edit"
            style="@style/Widget.TextEdit"
            android:hint="@string/first_name_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_input"
        style="@style/Widget.TextInputLayout"
        android:layout_width="125dp"
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/first_name_input"
        app:layout_constraintEnd_toEndOf="@+id/email_input"
        app:layout_constraintTop_toTopOf="@+id/first_name_input"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/last_name_input_edit"
            style="@style/Widget.TextEdit"
            android:hint="@string/last_name_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input"
        style="@style/Widget.TextInputLayout"
        android:layout_width="265dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/password_input"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/last_name_input">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_input_edit"
            style="@style/Widget.TextEdit"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input"
        style="@style/Widget.TextInputLayout"
        android:layout_width="265dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:passwordToggleTint="@color/color_input_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_input_edit"
            style="@style/Widget.TextEdit"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirm_password"
        style="@style/Widget.TextInputLayout"
        android:layout_width="265dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:passwordToggleTint="@color/color_input_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirm_password_edit"
            style="@style/Widget.TextEdit"
            android:hint="@string/confirm_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <com.anazzubair.loginconcept.customviews.VerticalTextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_extrabold_italic"
        android:gravity="center"
        android:text="@string/sign_up_label"
        android:textAllCaps="true"
        android:textColor="@color/color_label"
        android:textSize="@dimen/unfolded_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />
</android.support.constraint.ConstraintLayout>